--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,227 @@
+*{
+  box-sizing:border-box;
+}
+body{
+  background:#48475f;
+}
+.pageTitle{
+  font-weight: 900;
+  padding: 20px 0;
+  color: #fff;
+  background:#8172c5;
+  border: 1px solid #ccc;
+  margin-bottom: 35px;
+}
 .App {
   text-align: center;
+  padding-top:30px;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-intro {
+  font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav span{
+  display:inline-block;
+  margin-right: 5px;
 }
+.nav a{
+  display:block;
+  padding:10px;
+  color:#fff;
+  text-decoration: none;
+}
+.videoRecord{
+  display:flex;
+}
+.record{
+  display:inline-block;
+  padding:10px;
+  border:1px solid #ccc;
+  cursor:pointer;
+}
+.selectedFile{
+  margin:10px 0;
+}
+.selectedFile .item{
+  background:rgb(221, 223, 224);
+  padding:5px 10px;
+  border:1px solid skyblue;
+  text-align:left;
+}
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+ul{
+  padding:0;
+}
+.form-control{
+  width:100%;
+  height:50px;
+  margin-bottom:10px;
+  padding:10px 20px;
+}
+textarea.form-control{
+  height: 100px;
+  width:100%;
+}
+.blog-wrapper{
+  
+}
+.inputForm{
+  background:#fff;
+  padding:35px 20px;
+  border:1px solid #ddd;
+}
+
+.post-wrapper{
+  background: #ffffff;
+  margin: 30px 0;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+article{
+  padding:10px;
+  /* background:#f2f2f2; */
+  border:1px solid #ccc;
+  margin:20px 0;
+  text-align: left;
+}
+.singlePost{
+  background:#fff;
+  padding:30px;
+}
+article h2{
+  text-transform: capitalize;
+}
+.widget{
+  background:#fff;
+  border:1px solid #ccc;
+  margin-bottom: 15px;
+}
+.widget h3{
+  text-transform: capitalize;
+  font-size:24px;
+  font-weight:700;
+  background:#fff;
+  padding:15px;
+  margin:0;
+  border-bottom:1px solid #ccc;
+}
+.widget ul{
+  margin: 0;
+  padding:15px 10px;
+}
+.widget ul:empty{
+  padding:0;
+}
+.widget article{
+  background:#f2f2f2;
+  margin:0 0 20px;
+}
+.widget article:last-child{
+  margin-bottom: 0;
+}
+.widget article > img{
+  width:80px;
+  height:80px;
+  margin:5px 0;
+}
+
+img{
+  max-width:100%;
+}
+.disabled{
+  pointer-events: none;
+}
+.noItem{
+  padding: 30px 20px;
+  margin: 20px auto;
+  border: 1px solid #ccc;
+  background: #f7f7f7;
+  font-size: 20px;
+}
+.locationBtn{
+  /* background:#34495e;
+  display:block;
+  padding:10px 15px;
+  color:#fff;
+  cursor:pointer; */
+}
+.popupModal,
+.mapModal{
+  width:100%;
+  background:rgba(0,0,0,0.3);
+  position: fixed;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  z-index:2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modalContent{
+  width:400px;
+  height: 450px;
+  background:#fff; 
+  border-radius:8px;
+  text-align:center;
+}
+.mapBox{
+  width:400px;
+  height: 300px;
+  position:relative;
+}
+
+
+.tools{
+  display:flex;
+}
+.tools > :nth-child(n+1){
+  margin-right: 5px;
+}
+input[type="submit"]{
+  background-color: #202221;
+  color: #f1e5e6;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: 700;
+  overflow: hidden;
+  margin: 20px 0 0;
+  border:none;
+  text-transform: capitalize;
+}
+/* //input file */
+.upload{
+  position:relative;
+}
+[type="file"] {
+  width:100%;
+  height: 40px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  left:0;
+  z-index: 0;
+}
+[type="file"] + label {
+  margin-bottom: 0;
+  padding:.62rem 1rem;
+}
+
+
